// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Tags render truncates values by maxTagTextLength 1`] = `
<div
  class="rc-select rc-select-multiple"
>
  <div
    class="rc-select-selector"
  >
    <span
      class="rc-select-selection-item"
    >
      <span
        class="rc-select-selection-item-content"
      >
        On...
      </span>
      <span
        aria-hidden="true"
        class="rc-select-selection-item-remove"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          class="rc-select-selection-item-remove-icon"
        >
          ×
        </span>
      </span>
    </span>
    <span
      class="rc-select-selection-item"
    >
      <span
        class="rc-select-selection-item-content"
      >
        Tw...
      </span>
      <span
        aria-hidden="true"
        class="rc-select-selection-item-remove"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          class="rc-select-selection-item-remove-icon"
        >
          ×
        </span>
      </span>
    </span>
    <span
      class="rc-select-selection-search"
      style="width: 0px;"
    >
      <input
        aria-activedescendant="rc_select_7_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_7_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_7_list"
        autocomplete="off"
        class="rc-select-selection-search-input"
        id="rc_select_7"
        role="combobox"
        value=""
      />
      <span
        aria-hidden="true"
        class="rc-select-selection-search-mirror"
      >
         
      </span>
    </span>
  </div>
</div>
`;

exports[`Select.Tags renders unlisted item in value 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-open"
>
  <div
    class="rc-select-selector"
    style=""
  >
    <span
      class="rc-select-selection-item"
    >
      <span
        class="rc-select-selection-item-content"
      >
        3
      </span>
      <span
        aria-hidden="true"
        class="rc-select-selection-item-remove"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          class="rc-select-selection-item-remove-icon"
        >
          ×
        </span>
      </span>
    </span>
    <span
      class="rc-select-selection-search"
      style="width: 0px;"
    >
      <input
        aria-activedescendant="rc_select_23_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_23_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_23_list"
        autocomplete="off"
        class="rc-select-selection-search-input"
        id="rc_select_23"
        role="combobox"
        value=""
      />
      <span
        aria-hidden="true"
        class="rc-select-selection-search-mirror"
      >
         
      </span>
    </span>
  </div>
  <div>
    <div
      class="rc-select-dropdown  rc-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; width: 0px;"
    >
      <div>
        <div
          id="rc_select_23_list"
          role="listbox"
          style="height: 0px; overflow: hidden;"
        >
          <div
            aria-selected="false"
            id="rc_select_23_list_0"
            role="option"
          >
            1
          </div>
          <div
            aria-selected="false"
            id="rc_select_23_list_1"
            role="option"
          >
            2
          </div>
        </div>
        <div
          class=""
          style="height: 200px;"
        >
          <div>
            <div
              class=""
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-selected="false"
                class="rc-select-item rc-select-item-option rc-select-item-option-active"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  1
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-select-item rc-select-item-option"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  2
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
